--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -146,45 +146,72 @@ startDate = 2021-10-05
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 스파인 분쟁지대로 오세요
 
+bossname = 카타콤
+bosstime = 12:20
+genPeriod = 168:00
+startDate = 2021-10-04
+before_alert_ment = 입니다
+alert_ment = 입니다. 이교도의 카타콤으로 오세요
 
+bossname = 카타콤
+bosstime = 20:50
+genPeriod = 168:00
+startDate = 2021-10-04
+before_alert_ment = 입니다
+alert_ment = 입니다. 이교도의 카타콤으로 오세요
 
+bossname = 카타콤
+bosstime = 12:20
+genPeriod = 168:00
+startDate = 2021-10-05
+before_alert_ment = 입니다
+alert_ment = 입니다. 이교도의 카타콤으로 오세요
 
+bossname = 카타콤
+bosstime = 20:50
+genPeriod = 168:00
+startDate = 2021-10-05
+before_alert_ment = 입니다
+alert_ment = 입니다. 이교도의 카타콤으로 오세요
 
+bossname = 카타콤
+bosstime = 12:20
+genPeriod = 168:00
+startDate = 2021-10-06
+before_alert_ment = 입니다
+alert_ment = 입니다. 이교도의 카타콤으로 오세요
 
+bossname = 카타콤
+bosstime = 20:50
+genPeriod = 168:00
+startDate = 2021-10-06
+before_alert_ment = 입니다
+alert_ment = 입니다. 이교도의 카타콤으로 오세요
 
+bossname = 카타콤
+bosstime = 12:20
+genPeriod = 168:00
+startDate = 2021-10-07
+before_alert_ment = 입니다
+alert_ment = 입니다. 이교도의 카타콤으로 오세요
 
+bossname = 카타콤
+bosstime = 20:50
+genPeriod = 168:00
+startDate = 2021-10-07
+before_alert_ment = 입니다
+alert_ment = 입니다. 이교도의 카타콤으로 오세요
 
+bossname = 카타콤
+bosstime = 12:20
+genPeriod = 168:00
+startDate = 2021-10-08
+before_alert_ment = 입니다
+alert_ment = 입니다. 이교도의 카타콤으로 오세요
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+bossname = 카타콤
+bosstime = 20:50
+genPeriod = 168:00
+startDate = 2021-10-08
+before_alert_ment = 입니다
+alert_ment = 입니다. 이교도의 카타콤으로 오세요
