--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -216,8 +216,16 @@ startDate = 2021-10-15
 before_alert_ment = 입니다
 alert_ment = 입니다. 이교도의 카타콤으로 오세요
 
+bossname = 스킬북제작
+bosstime = 20:59
+genPeriod = 168:00
+startDate = 2021-10-16
+before_alert_ment = 입니다
+alert_ment = 입니다. 1분 후 제작하세요
 
-
-
-
-
+bossname = 스킬북제작
+bosstime = 20:59
+genPeriod = 168:00
+startDate = 2021-10-17
+before_alert_ment = 입니다
+alert_ment = 입니다. 1분 후 제작하세요
