--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -230,4 +230,9 @@ startDate = 2021-10-17
 before_alert_ment = 입니다
 alert_ment = 입니다. 1분 후 제작하세요
 
-
+bossname = 자켄
+bosstime = 22:00
+genPeriod = 168:00
+startDate = 2021-10-16
+before_alert_ment = 입니다
+alert_ment = 입니다. 악마섬으로 오세요
