--- a/boss.ini
+++ b/boss.ini
@@ -69,7 +69,7 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다. 크루마탑 6층으로 오세요
 mungtime = 1
 
-bossname = 티미니엘
+bossname = 티미니엘, 니엘
 gentime = 08:00
 nogencheck = 0
 before_alert_ment = 입니다
@@ -139,42 +139,42 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다. 아덴 국경지대로 오세요
 mungtime = 1
 
-bossname = 타나토스
+bossname = 타나토스, 타나
 gentime = 25:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 과거의 전장으로 오세요
 mungtime = 1
 
-bossname = 오르펜
+bossname = 오르펜, 올펜
 gentime = 24:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 포자 확산지로 오세요
 mungtime = 1
 
-bossname = 올크스
+bossname = 올크스, 올크
 gentime = 24:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 고요한 분지로 오세요
 mungtime = 1
 
-bossname = 바실라
+bossname = 바실라, 바실
 gentime = 04:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 황무지 남부로 오세요
 mungtime = 1
 
-bossname = 펠리스
+bossname = 펠리스, 펠리
 gentime = 03:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 비하이브로 오세요
 mungtime = 1
 
-bossname = 엔쿠라
+bossname = 엔쿠라, 엔쿠
 gentime = 06:00
 nogencheck = 0
 before_alert_ment = 입니다
@@ -202,7 +202,7 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다. 고르곤 화원으로 오세요
 mungtime = 1
 
-bossname = 마투라
+bossname = 마투라, 마투
 gentime = 06:00
 nogencheck = 0
 before_alert_ment = 입니다
@@ -223,7 +223,7 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다. 개미굴 3층으로 오세요
 mungtime = 1
 
-bossname = 크루마
+bossname = 크루마, 돌크
 gentime = 08:00
 nogencheck = 0
 before_alert_ment = 입니다
@@ -272,7 +272,7 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다. 격전의 평원으로 오세요
 mungtime = 1
 
-bossname = 란도르
+bossname = 란도르, 란돌
 gentime = 09:00
 nogencheck = 0
 before_alert_ment = 입니다
@@ -300,7 +300,7 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다. 국립 묘지로 오세요
 mungtime = 1
 
-bossname = 카브리오
+bossname = 카브리오, 카브, 리오
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
