--- a/boss.ini
+++ b/boss.ini
@@ -160,14 +160,14 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다. 고요한 분지로 오세요
 mungtime = 1
 
-bossname = 바실라, 바실
+bossname = 바실라, 바실, ㅄㄹ
 gentime = 04:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 황무지 남부로 오세요
 mungtime = 1
 
-bossname = 펠리스, 펠리
+bossname = 펠리스, 펠리, ㅍㄽ
 gentime = 03:00
 nogencheck = 0
 before_alert_ment = 입니다
